Whiteout, which is actually like brownout.

--- a/www/custom_styles.css
+++ b/www/custom_styles.css
@@ -8,7 +8,7 @@
   margin-bottom: 20px;
 }
 .shot-chart-container {
-  background-color: #000004;
+  background-color: #a38671;
   color: #fff;
   position: relative;
 }
